Revert "Fix text wrapping issue"

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -317,7 +317,7 @@
     -fx-border-width: 1;
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
-    -fx-text-fill: #FFFFFF;
+    -fx-text-fill: white;
 }
 
 #filterField, #personListPanel, #personWebpage {
